# tauri-vue-python

./: .gitignore  education.md
demo/: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  setup.sh  tsconfig.json  vite.config.ts  vitest.config.ts
demo/src/: App.vue  utils.ts
demo/src-backend/: main.py  pyproject.toml
demo/src-tauri/: Cargo.toml  tauri.conf.json
demo/src-tauri/src/: lib.rs  main.rs
demo/tests/: frontend.spec.ts  test_backend.py
